--- a/publication-3dcd06/projects/index.html
+++ b/publication-3dcd06/projects/index.html
@@ -219,6 +219,100 @@ Visit Project
 		<div id="e-n-tab-content-6224499532" role="tabpanel" aria-labelledby="e-n-tab-title-6224499532" data-tab-index="2" style="--n-tabs-title-order: 2;" class=" elementor-element elementor-element-3202548 e-con-full e-flex e-con e-child" data-id="3202548" data-element_type="container">
 		<div class="elementor-element elementor-element-09e93ff e-flex e-con-boxed e-con e-child" data-id="09e93ff" data-element_type="container">
 					<div class="e-con-inner">
+
+
+
+<!--  Arkan Traders -->
+<!--  --///////////////////////////////////////////////////////////////////////////   -->
+
+						<div class="elementor-element elementor-element-38c8400 e-con-full e-flex e-con e-child" data-id="38c8400" data-element_type="container">
+						<div class="elementor-element elementor-element-1f9f765 e-con-full e-flex e-con e-child" data-id="1f9f765" data-element_type="container">
+								<div class="elementor-element elementor-element-8af9115 elementor-widget elementor-widget-heading" data-id="8af9115" data-element_type="widget" data-widget_type="heading.default">
+								<div class="elementor-widget-container">
+									<h3 class="elementor-heading-title elementor-size-default">Arkan Traders</h3>				</div>
+								</div>
+								</div>
+						<div class="elementor-element elementor-element-742d4fc e-con-full e-flex e-con e-child" data-id="742d4fc" data-element_type="container">
+								<div class="elementor-element elementor-element-5332655 elementor-widget elementor-widget-text-editor" data-id="5332655" data-element_type="widget" data-widget_type="text-editor.default">
+								<div class="elementor-widget-container">
+													<a href="https://arkantraders.com/" target="_blank" rel="noopener noreferrer" style="display: inline-flex; flex-direction: column; align-items: center; text-decoration: none; color: inherit; font-size: 20px;">
+				<span style="display: flex; align-items: center;">
+				Visit Project
+				<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="currentColor" style="width: 21px; height: 21px; vertical-align: middle; margin-left: 6px;">
+				<path fill-rule="evenodd" d="M15.75 2.25H21a.75.75 0 0 1 .75.75v5.25a.75.75 0 0 1-1.5 0V4.81L8.03 17.03a.75.75 0 0 1-1.06-1.06L19.19 3.75h-3.44a.75.75 0 0 1 0-1.5Zm-10.5 4.5a1.5 1.5 0 0 0-1.5 1.5v10.5a1.5 1.5 0 0 0 1.5 1.5h10.5a1.5 1.5 0 0 0 1.5-1.5V10.5a.75.75 0 0 1 1.5 0v8.25a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V8.25a3 3 0 0 1 3-3h8.25a.75.75 0 0 1 0 1.5H5.25Z" clip-rule="evenodd"></path>
+				</svg>
+				</span>
+				<span style="width: 100%; margin-top: 1px; display: block;"></span>
+				</a>								</div>
+								</div>
+								</div>
+								</div>
+
+<!--  --///////////////////////////////////////////////////////////////////////////  -->
+
+
+
+<!-- E&F Dubai -->
+<!--  --///////////////////////////////////////////////////////////////////////////   -->
+
+						<div class="elementor-element elementor-element-38c8400 e-con-full e-flex e-con e-child" data-id="38c8400" data-element_type="container">
+						<div class="elementor-element elementor-element-1f9f765 e-con-full e-flex e-con e-child" data-id="1f9f765" data-element_type="container">
+								<div class="elementor-element elementor-element-8af9115 elementor-widget elementor-widget-heading" data-id="8af9115" data-element_type="widget" data-widget_type="heading.default">
+								<div class="elementor-widget-container">
+									<h3 class="elementor-heading-title elementor-size-default">E&F Dubai</h3>				</div>
+								</div>
+								</div>
+						<div class="elementor-element elementor-element-742d4fc e-con-full e-flex e-con e-child" data-id="742d4fc" data-element_type="container">
+								<div class="elementor-element elementor-element-5332655 elementor-widget elementor-widget-text-editor" data-id="5332655" data-element_type="widget" data-widget_type="text-editor.default">
+								<div class="elementor-widget-container">
+													<a href="https://eandfdubai.com/" target="_blank" rel="noopener noreferrer" style="display: inline-flex; flex-direction: column; align-items: center; text-decoration: none; color: inherit; font-size: 20px;">
+				<span style="display: flex; align-items: center;">
+				Visit Project
+				<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="currentColor" style="width: 21px; height: 21px; vertical-align: middle; margin-left: 6px;">
+				<path fill-rule="evenodd" d="M15.75 2.25H21a.75.75 0 0 1 .75.75v5.25a.75.75 0 0 1-1.5 0V4.81L8.03 17.03a.75.75 0 0 1-1.06-1.06L19.19 3.75h-3.44a.75.75 0 0 1 0-1.5Zm-10.5 4.5a1.5 1.5 0 0 0-1.5 1.5v10.5a1.5 1.5 0 0 0 1.5 1.5h10.5a1.5 1.5 0 0 0 1.5-1.5V10.5a.75.75 0 0 1 1.5 0v8.25a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V8.25a3 3 0 0 1 3-3h8.25a.75.75 0 0 1 0 1.5H5.25Z" clip-rule="evenodd"></path>
+				</svg>
+				</span>
+				<span style="width: 100%; margin-top: 1px; display: block;"></span>
+				</a>								</div>
+								</div>
+								</div>
+								</div>
+
+<!--  --///////////////////////////////////////////////////////////////////////////  -->
+
+
+
+<!-- YB Info Sys -->
+<!--  --///////////////////////////////////////////////////////////////////////////   -->
+
+						<div class="elementor-element elementor-element-38c8400 e-con-full e-flex e-con e-child" data-id="38c8400" data-element_type="container">
+						<div class="elementor-element elementor-element-1f9f765 e-con-full e-flex e-con e-child" data-id="1f9f765" data-element_type="container">
+								<div class="elementor-element elementor-element-8af9115 elementor-widget elementor-widget-heading" data-id="8af9115" data-element_type="widget" data-widget_type="heading.default">
+								<div class="elementor-widget-container">
+									<h3 class="elementor-heading-title elementor-size-default">YB Info Sys</h3>				</div>
+								</div>
+								</div>
+						<div class="elementor-element elementor-element-742d4fc e-con-full e-flex e-con e-child" data-id="742d4fc" data-element_type="container">
+								<div class="elementor-element elementor-element-5332655 elementor-widget elementor-widget-text-editor" data-id="5332655" data-element_type="widget" data-widget_type="text-editor.default">
+								<div class="elementor-widget-container">
+													<a href="https://ybinfosys.com/" target="_blank" rel="noopener noreferrer" style="display: inline-flex; flex-direction: column; align-items: center; text-decoration: none; color: inherit; font-size: 20px;">
+				<span style="display: flex; align-items: center;">
+				Visit Project
+				<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="currentColor" style="width: 21px; height: 21px; vertical-align: middle; margin-left: 6px;">
+				<path fill-rule="evenodd" d="M15.75 2.25H21a.75.75 0 0 1 .75.75v5.25a.75.75 0 0 1-1.5 0V4.81L8.03 17.03a.75.75 0 0 1-1.06-1.06L19.19 3.75h-3.44a.75.75 0 0 1 0-1.5Zm-10.5 4.5a1.5 1.5 0 0 0-1.5 1.5v10.5a1.5 1.5 0 0 0 1.5 1.5h10.5a1.5 1.5 0 0 0 1.5-1.5V10.5a.75.75 0 0 1 1.5 0v8.25a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V8.25a3 3 0 0 1 3-3h8.25a.75.75 0 0 1 0 1.5H5.25Z" clip-rule="evenodd"></path>
+				</svg>
+				</span>
+				<span style="width: 100%; margin-top: 1px; display: block;"></span>
+				</a>								</div>
+								</div>
+								</div>
+								</div>
+
+<!--  --///////////////////////////////////////////////////////////////////////////  -->
+
+
+
+
 		<div class="elementor-element elementor-element-38c8400 e-con-full e-flex e-con e-child" data-id="38c8400" data-element_type="container">
 		<div class="elementor-element elementor-element-1f9f765 e-con-full e-flex e-con e-child" data-id="1f9f765" data-element_type="container">
 				<div class="elementor-element elementor-element-8af9115 elementor-widget elementor-widget-heading" data-id="8af9115" data-element_type="widget" data-widget_type="heading.default">
@@ -229,7 +323,7 @@ Visit Project
 		<div class="elementor-element elementor-element-742d4fc e-con-full e-flex e-con e-child" data-id="742d4fc" data-element_type="container">
 				<div class="elementor-element elementor-element-5332655 elementor-widget elementor-widget-text-editor" data-id="5332655" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<a href="/projects/wondergulfgt.com" target="_blank" rel="noopener noreferrer" style="display: inline-flex; flex-direction: column; align-items: center; text-decoration: none; color: inherit; font-size: 20px;">
+									<a href="https://wondergulfgt.com" target="_blank" rel="noopener noreferrer" style="display: inline-flex; flex-direction: column; align-items: center; text-decoration: none; color: inherit; font-size: 20px;">
 <span style="display: flex; align-items: center;">
 Visit Project
 <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="currentColor" style="width: 21px; height: 21px; vertical-align: middle; margin-left: 6px;">
@@ -241,6 +335,8 @@ Visit Project
 				</div>
 				</div>
 				</div>
+
+
 		<div class="elementor-element elementor-element-c2ed93c e-con-full e-flex e-con e-child" data-id="c2ed93c" data-element_type="container">
 		<div class="elementor-element elementor-element-5d0db19 e-con-full e-flex e-con e-child" data-id="5d0db19" data-element_type="container">
 				<div class="elementor-element elementor-element-75fc93d elementor-widget elementor-widget-heading" data-id="75fc93d" data-element_type="widget" data-widget_type="heading.default">
@@ -263,6 +359,7 @@ Visit Project
 				</div>
 				</div>
 				</div>
+				
 		<div class="elementor-element elementor-element-3f7ae8c e-con-full e-flex e-con e-child" data-id="3f7ae8c" data-element_type="container">
 		<div class="elementor-element elementor-element-64e2ac4 e-con-full e-flex e-con e-child" data-id="64e2ac4" data-element_type="container">
 				<div class="elementor-element elementor-element-de2bb70 elementor-widget elementor-widget-heading" data-id="de2bb70" data-element_type="widget" data-widget_type="heading.default">
@@ -285,6 +382,7 @@ Visit Project
 				</div>
 				</div>
 				</div>
+
 		<div class="elementor-element elementor-element-8f65af3 e-con-full e-flex e-con e-child" data-id="8f65af3" data-element_type="container">
 		<div class="elementor-element elementor-element-a495436 e-con-full e-flex e-con e-child" data-id="a495436" data-element_type="container">
 				<div class="elementor-element elementor-element-23dd481 elementor-widget elementor-widget-heading" data-id="23dd481" data-element_type="widget" data-widget_type="heading.default">
