--- a/publication-3dcd06/index.html
+++ b/publication-3dcd06/index.html
@@ -678,7 +678,6 @@ moveLogos();
 		<div class="elementor-element elementor-element-1af46ae1 e-con-full e-flex elementor-invisible e-con e-child" data-id="1af46ae1" data-element_type="container" data-settings='{"animation":"fadeInUp"}'>
 				<div class="elementor-element elementor-element-2b1f61f elementor-widget elementor-widget-shortcode" data-id="2b1f61f" data-element_type="widget" data-widget_type="shortcode.default">
 				<div class="elementor-widget-container">
-							<div class="elementor-shortcode">
 
 
 
@@ -686,30 +685,122 @@ moveLogos();
 
 
 
-
-<div class="wpcf7 no-js" id="wpcf7-f1623-p1194-o29" lang="en-US" dir="ltr" data-wpcf7-id="1623">
-<div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
-
-
-
-
-
-
-<form action="https://api.web3forms.com/submit" method="POST">
+<form class="contact-form" id="contactForm">
   <input type="hidden" name="access_key" value="ff342417-1a14-4ddc-b026-cecd83191141">
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" required></textarea>
-  <button type="submit">Send</button>
+
+  <button type="submit" id="submitBtn">
+    <span class="btn-text">Send Message</span>
+    <span class="btn-loader"></span>
+  </button>
+
+  <div class="form-message" id="formMessage"></div>
 </form>
 
+<style>
+  .contact-form input,
+  .contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    font-size: 1rem;
+  }
+
+  .contact-form input:focus,
+  .contact-form textarea:focus {
+    border-color: #4a90e2;
+    outline: none;
+  }
+
+  button:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+
+  /* Loader inside button */
+  .btn-loader {
+    border: 3px solid #fff;
+    border-top: 3px solid transparent;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 1s linear infinite;
+    display: none;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .form-message {
+    text-align: center;
+    font-size: 0.9rem;
+    display: none;
+    margin-top: 1rem;
+  }
+
+  .form-message.success { color: #28a745; }
+  .form-message.error { color: #dc3545; }
+</style>
+
+<script>
+  const form = document.getElementById("contactForm");
+  const messageDiv = document.getElementById("formMessage");
+  const submitBtn = document.getElementById("submitBtn");
+  const btnText = submitBtn.querySelector(".btn-text");
+  const btnLoader = submitBtn.querySelector(".btn-loader");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    messageDiv.style.display = "none";
+
+    // Show loader and disable button
+    btnText.textContent = "Sending...";
+    btnLoader.style.display = "inline-block";
+    submitBtn.disabled = true;
+
+    const formData = new FormData(form);
+
+    try {
+      const response = await fetch("https://api.web3forms.com/submit", {
+        method: "POST",
+        body: formData
+      });
+
+      const data = await response.json();
+
+      if (data.success) {
+        messageDiv.textContent = "✅ Message sent successfully!";
+        messageDiv.className = "form-message success";
+        messageDiv.style.display = "block";
+        form.reset();
+      } else {
+        messageDiv.textContent = "❌ Something went wrong.";
+        messageDiv.className = "form-message error";
+        messageDiv.style.display = "block";
+      }
+    } catch (error) {
+      messageDiv.textContent = "⚠️ Network error, try again later.";
+      messageDiv.className = "form-message error";
+      messageDiv.style.display = "block";
+    } finally {
+      // Reset button
+      btnText.textContent = "Send Message";
+      btnLoader.style.display = "none";
+      submitBtn.disabled = false;
+    }
+  });
+</script>
 
 
 
 
 
-</div>
-</div>
 
 
 
